--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^2.5.2",
     "vue-momentjs": "^0.1.1",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.5.4",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
